# Sapfire

./: .clang-format  .clang_format  .dir-locals.el  .gitignore  .gitmodules  .p4ignore  .vimspector.json  CMakeLists.txt  CMakeSettings.json  Cargo.toml  Dependencies.lua  Engine.make  GameProgrammingOverview.sln  Makefile  Makefile.sandbox.windows.mak  Makefile.sapfire.windows.mak  README.md  UpgradeLog.htm  build-all.sh  build-cmake.sh  build.bat  build.zig  build.zig.zon  clean.bat  clean_compile.bat  compile-shaders.bat  compile.bat  compile_shaders.sh  compile_test.bat  dependencies.lua  dependencies.sh  engine_translation_units.cmake  generate_vs_project.bat  imgui.ini  install-dependencies.bat  launch.json  launch.sh  macos.sh  mesh_registry.db  premake5.lua  (+9 more)
Project/: .clang-format  Actor.h  AnimSpriteComponent.cpp  AnimSpriteComponent.h  Asteroid.cpp  Asteroid.h  BGSpriteComponent.h  CMakeLists.txt  Component.cpp  Game.cpp  GameProgrammingOverview.vcxproj  MovementComponent.cpp  Random.cpp  Ship.cpp  Ship.h  SpriteComponent.cpp  SpriteComponent.h  TileMapComponent.cpp  TileMapComponent.h  build-and-run.sh  build.sh  compile_commands.json
Project/.ccls-cache/@@home@nobu@workspace@Pong@Project/: @usr@local@include@SDL2@SDL_config.h
Project/.ccls-cache/@home@nobu@workspace@Pong@Project/: Actor.h  AnimSpriteComponent.cpp  Component.h  Game.h  Math.h  Ship.cpp  Structs.h  TileMapComponent.cpp
Project/Assets/: Cube.sfmesh  Cube2.sfhmesh  Cube2.sfmesh  Map.tmx  MapTileLayer1.csv  MapTileLayer2.csv  Plane.sfmesh  TileSet.tsx
Project/Exporters/: blender_export.py
Project/Shaders/: Basic.frag  Basic.vert  BasicMesh.vert  Lit.frag  Sprite.frag  Sprite.glsl  Sprite.vert  Transform.vert  Triangle.frag  Triangle.vert
Project/src/engine/: Actor.cpp  Actor.h  AnimSpriteComponent.cpp  AnimSpriteComponent.h  Application.cpp  Application.h  BGSpriteComponent.cpp  BGSpriteComponent.h  CameraActor.cpp  CameraActor.h  CircleColliderComponent.cpp  CircleColliderComponent.h  Component.cpp  Component.h  Core.h  Engine.h  EntryPoint.cpp  Game.cpp  Game.h  GameProgrammingOverview.cpp  InputComponent.cpp  InputComponent.h  Layer.h  LayerStack.h  Log.cpp  Log.h  Math.cpp  Math.h  Mesh.cpp  Mesh.h  MeshComponent.cpp  MeshComponent.h  MovementComponent.cpp  MovementComponent.h  PlaneActor.cpp  PlaneActor.h  Random.h  Renderer.cpp  Renderer.h  Shader.cpp  (+16 more)
Project/src/game/: AIActor.cpp  AIActor.h  Asteroid.cpp  Asteroid.h  IdleState.cpp  IdleState.h  Laser.cpp  Laser.h  MoveState.cpp  MoveState.h  Ship.cpp  Ship.h
Project/src/sandbox/: Sandbox.cpp  Sandbox.h
crates/sapfire_renderer/: Cargo.toml  build.rs
crates/sapfire_renderer/src/: camera.rs  camera_controller.rs  lib.rs  resources.rs
engine/: CMakeLists.txt
engine/include/: Sapfire.h  engpch.h
engine/include/animation/: anim_manager.h  skinned_data.h
engine/include/assets/: asset_manager.h  material_manager.h  mesh_manager.h  scene_writer.h  texture_manager.h
engine/include/components/: anim_component.h  component.h  ec_manager.h  entity.h  movement_component.h  name_component.h  render_component.h  test_custom_component.h  transform.h
engine/include/core/: application.h  core.h  entry.h  file_system.h  game_context.h  input.h  layer.h  layer_stack.h  logger.h  memory.h  platform.h  rtti.h  timer.h  uuid.h
engine/include/events/: application_event.h  event.h  input_event.h  keyboard_event.h
engine/include/math/: math_helper.h
engine/include/physics/: physics_engine.h
engine/include/render/: camera.h  command_queue.h  compute_context.h  context.h  copy_context.h  d3d_primitives.h  d3d_util.h  descriptor_heap.h  frame_data.h  graphics_context.h  graphics_device.h  lights.h  material.h  memory_allocator.h  mesh_manager.h  pipeline_state.h  resources.h  upload_buffer.h  window.h
engine/include/tools/: obj_loader.h  profiling.h  shader_compiler.h  texture_loader.h
engine/src/animation/: anim_manager.cpp  skinned_data.cpp
engine/src/assets/: asset_manager.cpp  material_manager.cpp  mesh_manager.cpp  scene_writer.cpp  texture_manager.cpp
engine/src/components/: anim_component.cpp  components.cpp  ec_manager.cpp  entity.cpp  movement_component.cpp  name_component.cpp  render_component.cpp  test_custom_component.cpp  transform.cpp
engine/src/core/: application.cpp  file_system.cpp  game_context.cpp  input.cpp  layer_stack.cpp  logger.cpp  memory.cpp  rtti.cpp  uuid.cpp
engine/src/physics/: physics_engine.cpp
engine/src/render/: camera.cpp  command_queue.cpp  compute_context.cpp  context.cpp  copy_context.cpp  d3d_primitives.cpp  d3d_util.cpp  descriptor_heap.cpp  frame_data.cpp  graphics_context.cpp  graphics_device.cpp  memory_allocator.cpp  pipeline_state.cpp  resources.cpp  window.cpp
engine/src/tools/: obj_loader.cpp  shader_compiler.cpp  texture_loader.cpp
sandbox/: CMakeLists.txt  build.sh
sandbox/include/: sandbox_game_context.h  sandbox_layer.h
sandbox/src/: entry.c  game.c  game.h  main.c  main.zig  sandbox_app.cpp  sandbox_game_context.cpp  sandbox_layer.cpp
sapfire/: CMakeLists.txt  build.sh  premake5.lua  sapfire.h
sapfire/src/: core.zig  defines.h  entry.h  game_definitions.h  game_types.zig  lib.zig  rendering.zig  sapfire.zig  scene.zig  test.c  test.h
sapfire/src/containers/: vector.c  vector.h
sapfire/src/core/: application.c  application.h  application.zig  asserts.h  asset_manager.zig  clock.c  clock.h  event.c  event.h  input.c  input.h  jobs.zig  logger.c  logger.h  logger.zig  sfmemory.c  sfmemory.h  sfstring.c  sfstring.h  time.zig
sapfire/src/default_shaders/: fragment_deferred_rendering.wgsl  fragment_write_gbuffers.wgsl  vertex_texture_quad.wgsl  vertex_write_gbuffers.wgsl  wgsl_common.wgsl  wgsl_fs.wgsl  wgsl_vs.wgsl
sapfire/src/math/: math_types.h  sfmath.c  sfmath.h
sapling/: CMakeLists.txt
sapling/include/: globals.h  icons.h  rtti_drawer.h  sapling_layer.h
sapling/src/: editor.zig  icons.cpp  main.zig  rtti_drawer.cpp  sapling_app.cpp  sapling_layer.cpp
tests/: CMakeLists.txt  memory_tests.cpp
tests/src/: expect.h  main.c  test_manager.c  test_manager.h
(+421 files in other folders)
