cmake_minimum_required(VERSION 3.7)
project(Engine)
# set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
set(OpenGL_GL_PREFERENCE "GLVND")
find_package(SDL2 REQUIRED)
find_package(GLEW REQUIRED)
find_package(OpenGL REQUIRED)
find_package(spdlog REQUIRED)
# if(GLEW_FOUND)
#     message("GLEW found")
# endif()
# if(SDL2_image)
# 	message("Package found")
# else()
# 	message("Package not found")
# endif()

file(GLOB ENGINE_HEADERS  "src/engine/*/*/*.h" "src/engine/*.h" "src/engine/*/*.h")
file(GLOB ENGINE_SOURCES  "src/engine/*/*/*.cpp" "src/engine/*.cpp" "src/engine/*/*.cpp")
file(GLOB GAME_HEADERS "src/sandbox/*.h")
file(GLOB GAME_SOURCES "src/sandbox/*.cpp")
add_subdirectory(libs/csv-parser)
include_directories(${SDL2_INCLUDE_DIRS}  ${GLEW_INCLUDE_DIR} libs/csv-parser/include src)
add_executable(Engine ${ENGINE_HEADERS} ${ENGINE_SOURCES} ${GAME_HEADERS} ${GAME_SOURCES})
target_link_libraries(Engine GLEW::GLEW ${SDL2_LIBRARIES}  soil2 csv spdlog::spdlog)
target_precompile_headers(Engine PRIVATE src/engine/engpch.h)
