[package]
name = "sapfire_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.23.0"
gl = "0.14.0"
winit = "0.27"
env_logger = "0.10"
log = "0.4"
wgpu = "0.15.1"
bytemuck = { version = "1.12", features = [ "derive" ] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
